<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="#123456"
    android:gravity="center_horizontal">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="40dp"
        android:textStyle="bold"
        android:shadowColor="#09708A"
        android:shadowDx="3.4"
        android:shadowDy="3.0"
        android:shadowRadius="5"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/travellogo"/>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameTextView"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/passwordTextView"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:background="#ffffff"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"/>
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:textColor="#ffffff"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#63EA6A"
            android:text="@string/register"/>

    </LinearLayout>
</LinearLayout>